--- a/src/components/Followers/Followers.css
+++ b/src/components/Followers/Followers.css
@@ -1,3 +1,7 @@
 .followers {
-    margin-top: -22.5vh;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; */
+  /* width: 100%; */
 }
