--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,7 +1,7 @@
 .banner {
-    height: 35vh;
-    background-image:  linear-gradient(to right, rgba(54, 214, 62, 0.794), rgba(53, 201, 157, 0.794), rgba(32, 155, 212, 0.794)),url("../../assets/images/mountain.jpg");
-    background-position: center;
+    /* height: 35vh; */
+/* background-image:  linear-gradient(to right, rgba(54, 214, 62, 0.794), rgba(53, 201, 157, 0.794), rgba(32, 155, 212, 0.794)); */
+    /* background-position: center; */
 }
 
 .banner-img {
