--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
-    color: white;
-    letter-spacing: 1rem;
-    text-transform: uppercase;
-    font-size: 5rem;
-    text-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.342);
+  color: gray;
+  letter-spacing: 1rem;
+  font-size: 4rem;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
