--- a/src/components/AddInput/AddInput.css
+++ b/src/components/AddInput/AddInput.css
@@ -21,7 +21,7 @@
     border: none;
     padding: 0.3rem 2rem;
     border-radius: 0.2rem;
-    background-color: rgb(53, 201, 157);
+    background-color: rebeccapurple;
     color: white;
     font-weight: 900;
 }
