--- a/src/components/Followers/Followers.css
+++ b/src/components/Followers/Followers.css
@@ -1,7 +1,3 @@
 .followers {
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column; */
-  /* width: 100%; */
+  padding-top: 50px;
 }
